--- a/tools/deploy/ms-controller.yaml
+++ b/tools/deploy/ms-controller.yaml
@@ -14,7 +14,7 @@ spec:
         name: ms
     spec:
       containers:
-      - image: claritylab/lucida:v2.2
+      - image: saadmemon/lucida:v2.3
         command: ['/bin/sh', '-c']
         args: ['cd $LUCIDAROOT/musicservice/server/ && python server.py']
         name: ms
