--- a/tools/deploy/ca-controller.yaml
+++ b/tools/deploy/ca-controller.yaml
@@ -14,7 +14,7 @@ spec:
         name: ca
     spec:
       containers:
-      - image: claritylab/lucida:v2.2
+      - image: saadmemon/lucida:v2.3
         command: ['/bin/sh', '-c']
         args: ['cd $LUCIDAROOT/calendar/ && ./gradlew run']
         name: ca
