--- a/tools/deploy/face-controller.yaml
+++ b/tools/deploy/face-controller.yaml
@@ -14,7 +14,7 @@ spec:
         name: face
     spec:
       containers:
-      - image: claritylab/lucida:v2.2
+      - image: saadmemon/lucida:v2.3
         command: ['/bin/sh', '-c']
         args: ['cd $LUCIDAROOT/djinntonic/face && ./FACEServer']
         name: face
