--- a/tools/deploy/we-controller.yaml
+++ b/tools/deploy/we-controller.yaml
@@ -14,7 +14,7 @@ spec:
         name: we
     spec:
       containers:
-      - image: claritylab/lucida:v2.2
+      - image: saadmemon/lucida:v2.3
         command: ['/bin/sh', '-c']
         args: ['cd $LUCIDAROOT/weather/server/ && python WeatherServer.py']
         name: we
