--- a/tools/deploy/qa-controller.yaml
+++ b/tools/deploy/qa-controller.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       dnsPolicy: Default
       containers:
-      - image: claritylab/lucida:v2.2
+      - image: saadmemon/lucida:v2.3
         command: ['/bin/sh', '-c']
         # Delete " && export wiki_indri_index=/usr/local/lucida/lucida/questionanswering/OpenEphyra/db/wiki_indri_index"
         # if you don't want to use Wikipedia as an additional knowledge base.
