--- a/tools/deploy/asrmaster-controller.yaml
+++ b/tools/deploy/asrmaster-controller.yaml
@@ -14,7 +14,7 @@ spec:
         name: asrmaster
     spec:
       containers:
-      - image: saadmemon/lucida:v2.3
+      - image: saadmemon/lucida5:latest
         command: ['/bin/sh', '-c']
         args: ['cd $LUCIDAROOT/speechrecognition/kaldi_gstreamer_asr/ && source $LUCIDAROOT/../tools/python_2_7_12/bin/activate && python kaldigstserver/master_server.py --port=8081']
         name: asrmaster
