--- a/tools/deploy/dig-controller.yaml
+++ b/tools/deploy/dig-controller.yaml
@@ -14,7 +14,7 @@ spec:
         name: dig
     spec:
       containers:
-      - image: saadmemon/lucida:v2.3
+      - image: saadmemon/lucida5:latest
         command: ['/bin/sh', '-c']
         args: ['cd $LUCIDAROOT/djinntonic/dig && ./DIGServer']
         name: dig
