--- a/tools/deploy/asrworker-controller.yaml
+++ b/tools/deploy/asrworker-controller.yaml
@@ -16,5 +16,5 @@ spec:
       containers:
       - image: saadmemon/lucida5:latest
         command: ['/bin/sh', '-c']
-        args: ['cd $LUCIDAROOT/speechrecognition/kaldi_gstreamer_asr/ && export GST_PLUGIN_PATH=$LUCIDAROOT/speechrecognition/kaldi_gstreamer_asr/kaldi/tools/gst-kaldi-nnet2-online/src && python kaldigstserver/worker.py -u ws://$ASRMASTER_PORT_8081_TCP_ADDR:8081/worker/ws/speech -c sample_english_nnet2.yaml']
+        args: ['cd $LUCIDAROOT/speechrecognition/kaldi_gstreamer_asr/ && export GST_PLUGIN_PATH=$LUCIDAROOT/speechrecognition/kaldi_gstreamer_asr/kaldi/tools/gst-kaldi-nnet2-online/src && /usr/bin/python2.7 python kaldigstserver/worker.py -u ws://$ASRMASTER_PORT_8081_TCP_ADDR:8081/worker/ws/speech -c sample_english_nnet2.yaml']
         name: asrworker
